Ui issues fixed in modal and dropmenus on mobile and pc view

--- a/script/css/admin.scss
+++ b/script/css/admin.scss
@@ -7302,8 +7302,9 @@ span.initials.avatar_name {
 
     > i {
       position: absolute;
-      right: -30px;
-      top: 50%;
+      right: 0px;
+      top: 0%;
+      color: red;
       margin-top: 4px;
       width: 14px;
       font-size: 9px;
@@ -7318,7 +7319,7 @@ span.initials.avatar_name {
     }
 
     &:first-child > i {
-      margin-top: -6px;
+      margin-top: 0px;
     }
   }
 
@@ -9335,17 +9336,17 @@ ul.status-list.dropdown-menu {
   padding: 0;
   max-width: 700px;
   max-height: 700px;
-  left: 50%;
-  top: 50%;
-  margin-left: 150px;
-  margin-top: 150px;
+  left: 50% !important;
+  top: 50% !important;
+  transform: translateX(-50%) translateY(-50%) !important;
+  margin-left: 0 !important;
+  margin-top: 0 !important;
   border-radius: 6px;
   display: none;
   transition: opacity 0.4s, transform 0.4s;
 
   &.sb-active {
     display: block;
-    animation: sb-lightbox-animation 0.5s;
   }
 
   &.sb-dialogflow-intent-box,
@@ -11225,6 +11226,8 @@ table {
 }
 
 .choices {
+  width: 100%;
+  max-width: 100% !important;
   .choices__inner,
   .choices__input {
     background-color: #fff;
@@ -11946,7 +11949,7 @@ li.menu_head:hover {
   .choices__inner {
     padding: 3px 10px 3px 10px;
     min-height: 30px;
-    max-width: 97%;
+    max-width: 100%;
     box-sizing: border-box;
   }
 }
@@ -15110,9 +15113,8 @@ input[type="color"] {
         transform: unset;
       }
 
-      ul{
-
-        li{
+      ul {
+        li {
           text-align: left;
           font-size: 14px;
           color: #000;
@@ -15120,4 +15122,15 @@ input[type="color"] {
       }
     }
   }
+}
+@media (max-width: 767.98px) {
+  .sb-account-box .sb-tab .sb-content {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
+.form-control[type="checkbox"] {
+  height: 10px;
+  width: 10px;
 }
